<resources>
    <string name="app_name">Gaysony</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Current Balance</string>
    <string name="aid">Financial Aid</string>
    <string name="parents">Parent Contribution</string>
    <string name="wage">Job Wage</string>
    <string name="hoursperweek">Hours / Week</string>
    <string name="title_activity_main2">Gaysony</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_transaction">AddTransactionActivity</string>
    <string name="title_activity_main3">Gaysony</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="transactions">Transactions</string>
    <string name="statistics">Statistics</string>
    <string name="maps">Maps</string>
    <string name="title_activity_input_budget">InputBudgetActivity</string>
    <string name="title_activity_temp">temp</string>


</resources>
